@@ -7,7 +7,7 @@ buildscript {
 plugins {
     id "com.github.hierynomus.license" version "0.15.0"
     id 'com.github.sherter.google-java-format' version '0.9'
-    id 'net.ltgt.errorprone' version  '1.1.1'
+    id 'net.ltgt.errorprone' version  '3.1.0'
     id 'java-library'
     id 'jacoco'
     id 'com.google.protobuf' version '0.8.11'
@@ -32,7 +32,6 @@ repositories {
 
 apply plugin: 'com.google.protobuf'
 apply plugin: 'idea' // IntelliJ plugin to see files generated from protos
-apply plugin: 'maven'
 apply plugin: 'maven-publish'
 apply plugin: 'com.github.sherter.google-java-format'
 
@@ -65,13 +64,12 @@ def getVersion() {
 description = '''Uber Cadence Java Client'''
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
 }
 
 dependencies {
-    errorproneJavac('com.google.errorprone:javac:9+181-r4173-1')
-    errorprone('com.google.errorprone:error_prone_core:2.3.4')
+    errorprone('com.google.errorprone:error_prone_core:2.23.0')
 
     compile group: 'io.opentracing', name: 'opentracing-api', version: '0.33.0'
     compile group: 'io.opentracing', name: 'opentracing-util', version: '0.33.0'
@@ -100,7 +98,7 @@ dependencies {
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'com.googlecode.junit-toolbox', name: 'junit-toolbox', version: '2.4'
-    testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+    testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.13'
     testCompile group: 'io.grpc', name: 'grpc-testing', version: '1.54.2'
     testImplementation 'io.opentracing:opentracing-mock:0.33.0'
     testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.5.1'
@@ -340,6 +338,18 @@ task registerDomain(type:JavaExec) {
     classpath = sourceSets.test.runtimeClasspath
 }
 
+tasks.withType(Test) {
+    jvmArgs += [
+        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.util=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.nio=ALL-UNNAMED',
+        '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED',
+    ]
+}
+
 test {
     dependsOn 'registerDomain'
     dependsOn 'licenseMain'
@@ -353,14 +363,14 @@ test {
 }
 
 jacoco {
-    toolVersion = "0.8.2"
+    toolVersion = "0.8.11"
 }
 
 jacocoTestReport {
     dependsOn test
     reports {
-        xml.enabled = true
-        html.enabled = true
+        xml.required = true
+        html.required = true
     }
 
     afterEvaluate {
